add build and test